tests/ui/lexer/prefixed-lifetime.stderr
error: prefix `'foo` is unknown
  --> $DIR/prefixed-lifetime.rs:7:4
   |
LL | w!('foo#lifetime);
   |    ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL | w!('foo #lifetime);
   |        +

error: aborting due to 1 previous error

